--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lamplighter",
   "version": "2.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "dist/lamplighter.js",
   "scripts": {
     "bundle": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,18 +16,21 @@
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.7.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
     "@types/jest": "^24.0.23",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.3.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "style-loader": "^1.0.2",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
