--- a/.babelrc
+++ b/.babelrc
@@ -2,9 +2,9 @@
   "presets": [
     "@babel/preset-env",
     "@babel/preset-typescript",
-    "@babel/preset-react"
   ],
   "plugins": [
+    "@babel/plugin-proposal-numeric-separator",
     "@babel/proposal-class-properties",
     "@babel/proposal-object-rest-spread"
   ]
