--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^3.9.0",
     "@types/node": "^12.12.21"
   }
 }
