--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lamplighter",
   "version": "2.0.5",
   "description": "",
-  "main": "dist/lamplighter.js",
+  "main": "lib/lamplighter.min.js",
   "scripts": {
     "bundle": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
