--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,3 +10,9 @@ jobs:
       uses: toolmantim/release-drafter@v5.2.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  CI:
+    name: CI
+    runs-on: ubuntu-latest
+    steps:
+      uses: actions/checkout@v2
+      runs: npm run check-types
