--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,4 +15,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       uses: actions/checkout@v2
-      runs: npm run check-types
+      run: npm run check-types
