--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,5 +14,5 @@ jobs:
     name: CI
     runs-on: ubuntu-latest
     steps:
-      uses: actions/checkout@v2
-      run: npm run check-types
+    - uses: actions/checkout@v2
+    - run: npm run check-types
